maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:44: error: not found: value estSurBiscit
	while (virages!=0 && estSurBiscit()==false){
                             ^